<resources>
    <string name="app_name">Perfil_Investidor_tp3</string>
    <string name="logo">Logo</string>
    <string name="o_objetivo_deste_aplicativo_identifificar_o_seu_perfil_de_investidor_de_acordo_com_o_question_rio_do_banco_paulista_atrav_s_das_suas_respostas_ser_poss_vel_realizar_uma_an_lise_para_verificar_se_o_seu_perfil_conservador_moderado_ou_arrojado_para_investimentos">O objetivo deste aplicativo é identifificar o seu perfil de investidor de acordo com o questionário do Banco Paulista. Através das suas respostas será possível realizar uma análise para verificar se o seu perfil é conservador, moderado ou arrojado para investimentos.</string>
    <string name="come_ar">Começar</string>
    <string name="nome">Nome</string>
    <string name="title_activity_result">ResultActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menos_de_6_meses">Menos de 6 meses</string>
    <string name="entre_6_meses_e_1_ano">Entre 6 meses e 1 ano</string>
    <string name="acima_de_3_anos">Acima de 3 anos</string>
    <string name="_1_por_quanto_tempo_voc_pretende_deixar_seu_dinheiro_investido">1. Por quanto tempo você pretende deixar seu dinheiro investido?</string>
    <string name="entre_1_ano_e_3_anos">Entre 1 ano e 3 anos</string>
    <string name="enviar">Enviar</string>
    <string name="_3_qual_das_alternativas_melhor_classica_sua_forma_o_e_experi_ncia_com_o_mercado_financeiro">3. Qual das alternativas melhor classica sua formação e experiência com o mercado financeiro?</string>
    <string name="n_o_possuo_forma_o_acad_mica_ou_conhecimento_do_mercado_nanceiro">Não possuo formação acadêmica ou conhecimento do mercado nanceiro</string>
    <string name="possuo_forma_o_acad_mica_na_rea_financeira_mas_n_o_tenho_experi_ncia_com_o_mercado_financeiro">Possuo formação acadêmica na área financeira, mas não tenho experiência com o mercado financeiro</string>
    <string name="possuo_forma_o_acad_mica_em_outra_rea_mas_possuo_conhecimento_do_mercado_financeiro">Possuo formação acadêmica em outra área, mas possuo conhecimento do mercado financeiro</string>
    <string name="possuo_forma_o_acad_mica_na_rea_financeira_ou_pleno_conhecimento_do_mercado_financeiro">Possuo formação acadêmica na área financeira ou pleno conhecimento do mercado financeiro</string>
    <string name="n_o_possuo_forma_o_acad_mica_ou_conhecimento_do_mercado_financeiro">Não possuo formação acadêmica ou conhecimento do mercado financeiro</string>
    <string name="_2_qual_o_objetivo_desse_investimento">2. Qual o objetivo desse investimento?</string>
    <string name="preserva_o_do_capital_para_n_o_perder_valor_ao_longo_do_tempo_assumindo_baixos_riscos_de_perdas">Preservação do capital para não perder valor ao longo do tempo, assumindo baixos riscos de perdas</string>
    <string name="aumento_gradual_do_capital_ao_longo_do_tempo_assumindo_riscos_moderados">Aumento gradual do capital ao longo do tempo, assumindo riscos moderados</string>
    <string name="aumento_do_capital_acima_da_taxa_de_retorno_m_dia_do_mercado_mesmo_que_isso_implique_assumir_riscos_de_perdas_elevadas">Aumento do capital acima da taxa de retorno média do mercado, mesmo que isso implique assumir riscos de perdas elevadas</string>
    <string name="obter_no_curto_prazo_retornos_elevados_e_signi_cativamente_acima_da_taxa_de_retorno_m_dia_do_mercado_assumindo_riscos_elevados">Obter no curto prazo retornos elevados e significativamente acima da taxa de retorno média do mercado, assumindo riscos elevados</string>
    <string name="_4_considerando_seus_rendimentos_regulares_qual_a_porcentagem_voc_pretende_reservar_para_aplica_es_financeiras">4. Considerando seus rendimentos regulares, qual a porcentagem você pretende reservar para aplicações financeiras?</string>
    <string name="no_m_ximo_25">No máximo 25%</string>
    <string name="entre_25_01_e_50">Entre 25,01 e 50%</string>
    <string name="acima_de_50">Acima de 50%</string>
    <string name="_5_caso_as_suas_aplica_es_sofressem_uma_queda_superior_a_30_o_que_voc_faria">5. Caso as suas aplicações sofressem uma queda superior a 30%, o que você faria?</string>
    <string name="resgataria_toda_a_aplica_o_e_aplicaria_na_poupan_a">Resgataria toda a aplicação e aplicaria na poupança</string>
    <string name="manteria_aplica_o_aguardando_uma_melhora_do_mercado">Manteria aplicação aguardando uma melhora do mercado</string>
    <string name="aumentaria_a_aplica_o_para_aproveitar_as_oportunidades_do_mercado">Aumentaria a aplicação para aproveitar as oportunidades do mercado</string>
    <string name="_6_como_est_distribu_do_o_seu_patrim_nio">6. Como está distribuído o seu patrimônio?</string>
    <string name="meu_patrim_nio_n_o_est_aplicado_ou_est_todo_aplicado_em_renda_fixa_e_ou_im_veis">Meu patrimônio não está aplicado ou está todo aplicado em renda fixa e/ou imóveis</string>
    <string name="menos_de_25_em_renda_vari_vel_e_o_restante_em_renda_fixa_e_ou_im_veis">Menos de 25% em renda variável e o restante em renda fixa e/ou imóveis</string>
    <string name="entre_25_01_e_50_aplicado_em_renda_vari_vel_e_o_restante_em_renda_fixa_e_ou_im_veis">Entre 25,01 e 50% aplicado em renda variável e o restante em renda fixa e/ou imóveis</string>
    <string name="acima_de_50_em_renda_vari_vel">Acima de 50% em renda variável</string>
    <string name="_7_em_rela_o_as_aplica_es_e_rendimentos_em_qual_dessas_situa_es_voc_se_enquadra">7. Em relação as aplicações e rendimentos, em qual dessas situações você se enquadra?</string>
    <string name="conto_com_o_rendimento_dessas_aplica_es_para_complementar_minha_renda_mensal">Conto com o rendimento dessas aplicações para complementar minha renda mensal</string>
    <string name="eventualmente_posso_resgatar_parte_das_aplica_es_para_fazer_frente_aos_meus_gastos_contudo_n_o_tenho_inten_o_de_resgatar_no_curto_prazo_e_pretendo_fazer_aplica_es_regulares">Eventualmente posso resgatar parte das aplicações para fazer frente aos meus gastos. Contudo, não tenho intenção de resgatar no curto prazo e pretendo fazer aplicações regulares</string>
    <string name="n_o_tenho_inten_o_de_resgatar_no_curto_prazo_mas_n_o_pretendo_realizar_novas_aplica_es">Não tenho intenção de resgatar no curto prazo, mas não pretendo realizar novas aplicações</string>
    <string name="n_o_tenho_inten_o_de_resgatar_no_curto_prazo_e_ainda_pretendo_fazer_aplica_es_regulares">Não tenho intenção de resgatar no curto prazo e ainda pretendo fazer aplicações regulares</string>
    <string name="_8_qual_sua_faixa_de_renda_mensal_m_dia">8. Qual sua faixa de renda mensal média?</string>
    <string name="at_r_1_000">Até R$ 1.000</string>
    <string name="de_r_1_001_at_r_5_000">De R$ 1.001 até R$ 5.000</string>
    <string name="de_r_5_001_at_r_10_000">De R$ 5.001 até R$ 10.000</string>
    <string name="acima_de_r_10_000">Acima de R$ 10.000</string>
    <string name="_9_qual_o_valor_aproximado_do_seu_patrim_nio">9. Qual o valor aproximado do seu patrimônio?</string>
    <string name="at_r_10_000">Até R$ 10.000</string>
    <string name="de_r_10_001_at_r_100_000">De R$ 10.001 até R$ 100.000</string>
    <string name="de_r_100_001_at_r_500_000">De R$ 100.001 até R$ 500.000</string>
    <string name="de_r_500_001_at_r_1_000_000">De R$ 500.001 até R$ 1.000.000</string>
    <string name="acima_de_r_1_000_001">Acima de R$ 1.000.001</string>
    <string name="finalizar">Finalizar</string>
    <string name="pr_xima">Próxima</string>
    <string name="cr_dito_https_www_bancopaulista_com_br_arquivos_questionarioapi_pdf">Crédito: https://www.bancopaulista.com.br/Arquivos/QuestionarioAPI.pdf</string>
    <string name="imagem_de_smartphone_com_telas_financeiras">Imagem de Smartphone com Telas Financeiras</string>
</resources>