<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1c2d60"
    android:padding="0dp"
    tools:context=".QuestionNine">


    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/_9_qual_o_valor_aproximado_do_seu_patrim_nio"
        android:textColor="#E6DADA"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/rbOptionA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/at_r_10_000"
            android:textColor="#E6DADA" />

        <RadioButton
            android:id="@+id/rbOptionB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/de_r_10_001_at_r_100_000"
            android:textColor="#E6DADA" />

        <RadioButton
            android:id="@+id/rbOptionC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/de_r_100_001_at_r_500_000"
            android:textColor="#E6DADA" />

        <RadioButton
            android:id="@+id/rbOptionD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/de_r_500_001_at_r_1_000_000"
            android:textColor="#E6DADA" />

        <RadioButton
            android:id="@+id/rbOptionE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acima_de_r_1_000_001"
            android:textColor="#E6DADA" />

    </RadioGroup>

    <Button
        android:id="@+id/btSend9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/finalizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>