<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1c2d60"
    android:padding="0dp"
    tools:context=".QuestionOne">


    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/_1_por_quanto_tempo_voc_pretende_deixar_seu_dinheiro_investido"
        android:textColor="#E6DADA"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/rbOptionA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menos_de_6_meses"
            android:textColor="#E6DADA" />

        <RadioButton
            android:id="@+id/rbOptionB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entre_6_meses_e_1_ano"
            android:textColor="#E6DADA" />

        <RadioButton
            android:id="@+id/rbOptionC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entre_1_ano_e_3_anos"
            android:textColor="#E6DADA" />

        <RadioButton
            android:id="@+id/rbOptionD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acima_de_3_anos"
            android:textColor="#E6DADA" />

    </RadioGroup>

    <Button
        android:id="@+id/btSend1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/enviar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>