<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".QuestionTwo">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1c2d60"
        android:padding="0dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/_2_qual_o_objetivo_desse_investimento"
            android:textColor="#E6DADA"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.842"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <RadioButton
                android:id="@+id/rbOptionA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/preserva_o_do_capital_para_n_o_perder_valor_ao_longo_do_tempo_assumindo_baixos_riscos_de_perdas"
                android:textColor="#E6DADA" />

            <RadioButton
                android:id="@+id/rbOptionB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aumento_gradual_do_capital_ao_longo_do_tempo_assumindo_riscos_moderados"
                android:textColor="#E6DADA" />

            <RadioButton
                android:id="@+id/rbOptionC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aumento_do_capital_acima_da_taxa_de_retorno_m_dia_do_mercado_mesmo_que_isso_implique_assumir_riscos_de_perdas_elevadas"
                android:textColor="#E6DADA" />

            <RadioButton
                android:id="@+id/rbOptionD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/obter_no_curto_prazo_retornos_elevados_e_signi_cativamente_acima_da_taxa_de_retorno_m_dia_do_mercado_assumindo_riscos_elevados"
                android:textColor="#E6DADA" />

        </RadioGroup>

        <Button
            android:id="@+id/btSend2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/pr_xima"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.842"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>